--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                 </ul>
             </div>
             <div class="join">
-                <h3 class="join-header">Присоединяйтесь</h3>
+                <p class="join-header">Присоединяйтесь</p>
                 <ul class="join-list">
                     <li class="list join-item">
                         <a href="" class="join-link">
@@ -393,12 +393,25 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe">
+                <p class="subscribe-header">
+                    Подпишитесь на рассылку
+                </p>
+                <form class="subscribe-form">
+                    <!-- <label for="user-email">Email</label> -->
+                    <input placeholder="E-mail" type="email" name="email" id="user-email" class="subscribe-input" />
+                    <button type="submit" class="subscribe-btn">Подписаться</button>
+                    <svg class="footer-send-ico">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg>
+                </form>
+            </div>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close" data-modal-close>
-                <svg class="modal-close-ico">
+                <svg class="modal-close-ico" width="24" height="24">
                     <use href="./images/icons.svg#icon-modal-close"></use>
                 </svg>
             </button>
